1.9.0
1.修正：Java 动态内存编译：类加载器环境不同 + 编译依赖缺失